name:                safepath
version:             0.1.0.0
synopsis:            Safe Paths in Haskell
description:         Please see README.md
homepage:            https://github.com/githubuser/safepath#readme
license:             MIT
license-file:        LICENSE
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
copyright:           2016 Tom Sydney Kerckhove
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Data.Path
    , Data.Path.Internal
  build-depends:
      base                  >= 4.7   && < 5
    , text                  >= 1.2   && < 1.3
    , validity              >= 0.3   && < 0.4
  default-language:    Haskell2010

test-suite safepath-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:
    Spec.hs
  other-modules:
    Data.PathSpec
    Data.Path.Gen
  build-depends:
      base
    , safepath
    , hspec                 >= 2.2    && < 2.3
    , QuickCheck            >= 2.8    && < 2.9
    , genvalidity           >= 0.2    && < 0.3
    , genvalidity-text      >= 0.1    && < 0.2
    , genvalidity-hspec     >= 0.2    && < 0.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/safepath
