name:                safepath
version:             0.1.0.0
synopsis:            Safe Paths in Haskell
description:         Please see README.md
homepage:            https://github.com/githubuser/safepath#readme
license:             MIT
license-file:        LICENSE
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
copyright:           2016 Tom Sydney Kerckhove
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Data.Path
    , Data.Path.Internal
  build-depends:
      base                  >= 4.7   && < 5
    , text                  >= 1.2   && < 1.3
    , validity              >= 0.3   && < 0.4
    , safe                  >= 0.3   && < 0.4
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/NorfairKing/safepath
